Different folder structure to make it easy to work with standard /css and /fonts setup

--- a/package.json
+++ b/package.json
@@ -6,6 +6,12 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "files": [
+     "preview.html",
+     "fonts/",
+     "scss/",
+     "svgs/"
+  ],
   "author": "Patrick Kelly",
   "license": "ISC"
 }
